--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-/_site
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+_site
+public
+.sass-cache
+.jekyll-metadata
+.env
+.env.build
