--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jekyll-starter",
+  "name": "gndclouds",
   "version": "0.0.1",
   "scripts": {
     "install": "bundle install",
@@ -12,7 +12,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/jekyll-starter"
+    "url": "https://github.com/gndclouds/gndclouds"
   },
   "license": "MIT"
 }
